# Communication-Protocols

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  test_uart
docs/html/: _application_protocol_8hpp.html  _application_protocol_8hpp_source.html  _comport_defines_8hpp.html  _comport_defines_8hpp_source.html  _connection_exception_8hpp.html  _connection_exception_8hpp_source.html  _qik_8hpp.html  _qik_8hpp_source.html  _rest_application_protocol_8hpp.html  _rest_application_protocol_8hpp_source.html  _t_c_p_socket_8hpp.html  _t_c_p_socket_8hpp_source.html  _transport_listener_8hpp.html  _transport_listener_8hpp_source.html  _transport_protocol_8hpp.html  _transport_protocol_8hpp_source.html  _u_a_r_t_8hpp.html  _u_a_r_t_8hpp_source.html  annotated.html  class_application_protocol-members.html  class_application_protocol.html  class_connection_exception-members.html  class_connection_exception.html  class_qik-members.html  class_qik.html  class_rest_application_protocol-members.html  class_rest_application_protocol.html  class_t_c_p_socket-members.html  class_t_c_p_socket.html  class_transport_listener-members.html  class_transport_listener.html  class_transport_protocol-members.html  class_transport_protocol.html  class_u_a_r_t-members.html  class_u_a_r_t.html  classes.html  dir_219fdef286108c1770389999d8c35671.html  dir_7fd62f431daaf4cc9c58b8cb77bab14b.html  dir_cfd938e9880de02bc907f728b56afe2d.html  dir_dc6edaed89c448f13aea439348c37f86.html  (+8 more)
docs/html/search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  functions_9.js  functions_a.js  functions_b.js  groups_0.js  searchdata.js
docs/latex/: _application_protocol_8hpp.tex  _comport_defines_8hpp.tex  _connection_exception_8hpp.tex  _qik_8hpp.tex  _rest_application_protocol_8hpp.tex  _t_c_p_socket_8hpp.tex  _transport_listener_8hpp.tex  _transport_protocol_8hpp.tex  _u_a_r_t_8hpp.tex  annotated.tex  class_application_protocol.eps  class_application_protocol.tex  class_connection_exception.eps  class_connection_exception.tex  class_qik.eps  class_qik.tex  class_rest_application_protocol.eps  class_rest_application_protocol.tex  class_t_c_p_socket.eps  class_t_c_p_socket.tex  class_transport_listener.eps  class_transport_listener.tex  class_transport_protocol.eps  class_transport_protocol.tex  class_u_a_r_t.eps  class_u_a_r_t.tex  dir_219fdef286108c1770389999d8c35671.tex  dir_7fd62f431daaf4cc9c58b8cb77bab14b.tex  dir_cfd938e9880de02bc907f728b56afe2d.tex  dir_dc6edaed89c448f13aea439348c37f86.tex  dir_e5fbe6d2783ccd4c93c7856d92d7be6e.tex  files.tex  group___comminucation_protocols.tex  hierarchy.tex  modules.tex  refman.tex
rest/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  rest_test.exe.stackdump  swagger.json
rest/source/include/: ApplicationProtocol.hpp  RestApplicationProtocol.cpp  RestApplicationProtocol.hpp  TransportListener.hpp  TransportProtocol.hpp
rest/source/include/rest/: ApplicationProtocol.hpp  RestApplicationProtocol.cpp  RestApplicationProtocol.hpp  TransportListener.hpp  TransportProtocol.hpp
rest/source/sources/: Main.cpp
rest/source/src/: Main.cpp  RestApplicationProtocol.cpp
rest/source/src/json/: Object.cpp
source/: Qik.cpp  TCPSocket.cpp
source/include/: ApplicationProtocol.hpp  ComportDefines.hpp  ConnectionException.hpp  Qik.hpp  RESTCallBack.hpp  RESTEngine.hpp  RestApplicationProtocol.hpp  TCPSocket.hpp  TCP_Linux.hpp  TCP_Windows.hpp  TransportListener.hpp  TransportProtocol.hpp  UART.hpp  UartTester.hpp  comport_defines.hpp
source/include/json/: JSON.hpp  List.hpp  Object.hpp  Parser.hpp  Value.hpp
source/src/: Main.cpp  Qik.cpp  RESTCallBack.cpp  RESTEngine.cpp  RESTParameters.cpp  RestApplicationProtocol.cpp  TCPSocket - Copy (2).cpp  TCPSocket - Copy.cpp  TCPSocket.cpp  TCP_Linux.cpp  TCP_Windows.cpp  UART.cpp  UartTester.cpp
source/src/json/: JSON.cpp  List.cpp  Object.cpp  Parser.cpp  Value.cpp
test/: RESTcallbackTest.cpp  RESTcallbackoverUartTest.cpp  TCPsocketTest.cpp  UartTest.cpp
tests/: main.cpp  tcpchatclient.cpp
